--- a/app/views/tools/_other_tools.html.erb
+++ b/app/views/tools/_other_tools.html.erb
@@ -32,7 +32,7 @@
     </li>
     <li class="box-tool-large">
       <div class="box-tool-large">
-        <h3>CROWDFUNDING</h3>
+        <h3>DONACIONES</h3>
         <!--<div class="tool-text" style="padding-bottom: 1em;">
 
         </div><!--.tool-text-->
