--- a/app/views/page/funding.html.erb
+++ b/app/views/page/funding.html.erb
@@ -2,19 +2,19 @@
 <div class="content-content cols">
   <div class="row">
     <div class="col-b-4a12">
-      <h2>Financiación</h2>
+      <h2>Aportaciones</h2>
       <p>La financiación también es una forma de acción política y por eso, en Más Madrid, la transparencia, la participación y la independencia son los principios que rigen nuestras finanzas. Puedes consultar todos los movimientos económicos de Más Madrid, así como de sus Grupos Parlamentarios y del Instituto 25M para la Democracia en el <a href="http://transparencia.masmadrid.info" target="_blank">Portal de Transparencia</a>. Muchas gracias por hacerlo posible. Con tu colaboración y compromiso, ¡claro que se puede!</p>
 
       <section class="funding">
         <ul>
           <li class="box-funding">
             <div class="box-funding">
-              <h3>Colaboraciones</h3>
+              <h3>Aportaciones</h3>
               <div class="funding-text">
                 <p>Colabora con Más Madrid de la manera más sencilla y personalizada. Elige cantidad, periodicidad y forma de pago. </p>
               </div>
               <div class="buttonbox">
-                <%= link_to "Colabora", edit_collaboration_path, class: "button" %>
+                <%= link_to "Colabora", edit_collaboration_path, class: "button boton-ocre-verde" %>
               </div>
             </div>
           </li>
@@ -24,11 +24,31 @@
               <div class="funding-text">
                 <p>Nuestras campañas son financiadas fundamentalmente con préstamos ciudadanos. Entra y realiza tu aportación y te lo devolvemos de manera íntegra y sin intereses.</p>
               </div><div class="buttonbox">
-                  <%= link_to "Ver campañas", microcredit_path, class: "button" %>
+                  <%= link_to "Ver campañas", microcredit_path, class: "button boton-ocre-verde" %>
               </div>
             </div>
           </li>
-        </ul>  
+        </ul>
+
+        <div class="funding-crowd">
+          <h3>Crowdfunding</h3>
+          <div class= crowd-text>
+            <p>
+              Texto de ejemplo para el crowd...
+            </p>
+          </div>
+          <div class="element-crowd">
+            <a class="boton-ocre-verde" href="#">Crowdfunding Furgoneta</a>
+          </div>
+          <div class="element-crowd">
+            <a class="boton-ocre-verde" href="#">Crowdfunding Actos</a>
+          </div>
+          <div class="element-crowd">
+            <a class="boton-ocre-verde" href="#">Crowdfunding Merchandising</a>
+          </div>
+        </div>
+
+
       </section>
     </div>
   </div>
