pequeños cambios en la página 'aportaciones'

--- a/app/views/page/funding.html.erb
+++ b/app/views/page/funding.html.erb
@@ -37,14 +37,20 @@
               Texto de ejemplo para el crowd...
             </p>
           </div>
-          <div class="element-crowd">
-            <a class="boton-ocre-verde" href="#">Crowdfunding Furgoneta</a>
+          <div class="buttonbox">
+            <div class="element-crowd">
+              <a class="boton-ocre-verde" href="#">Crowdfunding Furgoneta</a>
+            </div>
           </div>
-          <div class="element-crowd">
-            <a class="boton-ocre-verde" href="#">Crowdfunding Actos</a>
+          <div class="buttonbox">
+            <div class="element-crowd">
+              <a class="boton-ocre-verde" href="#">Crowdfunding Actos</a>
+            </div>
           </div>
-          <div class="element-crowd">
-            <a class="boton-ocre-verde" href="#">Crowdfunding Merchandising</a>
+          <div class="buttonbox">
+            <div class="element-crowd">
+              <a class="boton-ocre-verde" href="#">Crowdfunding Merchandising</a>
+            </div>
           </div>
         </div>
 
