Enlace whatsapp arreglado

--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -47,7 +47,7 @@
                 </a>
               </li>
               <li>
-                <a href="https://web.whatsapp.com/send?phone=34653710704&text=Hola%21%20Me%20gustar%C3%ADa%20estar%20atento%20de%20todas%20las%20novedades%20de%20M%C3%A1s%20Madrid%20y%20recibir%20mensajes%20con%20toda%20la%20informaci%C3%B3n%20de%20la%20iniciativa%20de%20Manuela%20Carmena%20e%20%C3%8D%C3%B1igo%20Errej%C3%B3n.%0D%0A%20%0D%0ARecuerda%20guardar%20este%20n%C3%BAmero%20de%20tel%C3%A9fono%20en%20tu%20tel%C3%A9fono%3A%20653710704%20Si%20no%20lo%20haces%2C%20no%20podremos%20enviarte%20mensajes%21" target="_blank">
+                <a href="https://api.whatsapp.com/send?phone=34653710704&text=Hola%21%20Me%20gustar%C3%ADa%20estar%20atento%20de%20todas%20las%20novedades%20de%20M%C3%A1s%20Madrid%20y%20recibir%20mensajes%20con%20toda%20la%20informaci%C3%B3n%20de%20la%20iniciativa%20de%20Manuela%20Carmena%20e%20%C3%8D%C3%B1igo%20Errej%C3%B3n.%0D%0A%20%0D%0ARecuerda%20guardar%20este%20n%C3%BAmero%20de%20tel%C3%A9fono%20en%20tu%20tel%C3%A9fono%3A%20653710704%20Si%20no%20lo%20haces%2C%20no%20podremos%20enviarte%20mensajes%21" target="_blank">
                   <%= image_tag "whatsapp_icon.svg", alt: "whatsapp mas madrid" %>
                 </a>
               </li>
