--- a/app/views/devise/registrations/_form.html.erb
+++ b/app/views/devise/registrations/_form.html.erb
@@ -170,7 +170,7 @@
       <% if resource.errors.include?(:province) %>
           <%= field_notice_box %>
       <% end %>
-      <%= render partial: 'subregion_select', locals:{country: @user_location[:country], province: @user_location[:province], disabled: false, required: true, field: :province, title:"Provincia", options_filter: (resource.can_change_vote_location? ? User.blocked_provinces : nil ) } %>
+      <%= render partial: 'subregion_select', locals:{country: "ES", province: @user_location[:province], disabled: false, required: true, field: :province, title:"Provincia", options_filter: (resource.can_change_vote_location? ? User.blocked_provinces : nil ) } %>
     </div>
     <div class="inputlabel-box">
       <% if resource.errors.include?(:town) %>
@@ -333,7 +333,19 @@
 					$('#user_last_name').val(result.last_name);
 					$('#user_email').val(result.email);
 					$('#user_email_confirmation').val(result.email);
-					//$('#user_address').val(result.address1+' '+result.address2+' '+result.address3);
+					$('#user_postal_code').val(result.zip);
+					
+					var direccion = '';
+					if(result.address1 != null){
+						direccion = result.address1;
+					}
+					if(result.address2 != null){
+						direccion = direccion+' '+result.address2;
+					}
+					if(result.address3 != null){
+						direccion = direccion+' '+result.address3;
+					}
+					$('#user_address').val(direccion);
 					
 					$('#user_gender option:contains(' + result.sex + ')').prop({selected: true});
 					$("#user_gender").filter(function() { 
