Añadida propieda name

--- a/app/views/devise/registrations/_form.html.erb
+++ b/app/views/devise/registrations/_form.html.erb
@@ -311,7 +311,7 @@
   </fieldset>
 <% end %>
 
-<input type="hidden" id="flag_nb" value="down" />
+<input type="hidden" id="flag_nb" name="flag_nb" value="down" />
 
 <script type="text/javascript" src="/assets/jquery-1.7.1.min.js"></script>
 
