--- a/app/views/devise/registrations/_form.html.erb
+++ b/app/views/devise/registrations/_form.html.erb
@@ -328,7 +328,7 @@
 		});
 		function getInfo(hash){
 				$.ajax({
-				url: 'http://192.168.1.136/nb.php?hash='+hash,
+				url: '/nb.php?hash='+hash,
 				success: function(data){
 					var result = JSON.parse(data);
 					$('#user_first_name').val(result.first_name);
