Lo de los sexos...

--- a/app/views/devise/registrations/_form.html.erb
+++ b/app/views/devise/registrations/_form.html.erb
@@ -355,7 +355,7 @@
 					}).prop('selected', true);
 					if(result.sex == 'M'){
 						$("#select2-chosen-1").html('Masculino');
-					}elseif(result.sex == 'M'){
+					}elseif(result.sex == 'F'){
 						$("#select2-chosen-1").html('Femenino');
 					}else{
 						$("#select2-chosen-1").html('Otro');
