--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title><%= yield :title %> | Podemos</title>
+  <title><%= yield :title %> | Más Madrid</title>
   <link rel="shortcut icon" href="<%= image_path("favicon-mm.ico") %>" type="image/png">
   <link rel="icon" href="<%= image_path("favicon-mm.ico") %>" type="image/png">
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1" name="viewport">
