--- a/app/views/page/guarantees.html.erb
+++ b/app/views/page/guarantees.html.erb
@@ -8,7 +8,7 @@
 
       <p>Su primera función es garantizar que Más Madrid sea una herramienta efectiva al servicio de la gente, un proyecto donde la gente tenga la primera y la última palabra. La Comisión se ocupa de velar por el cumplimiento real e igualitario de los documentos aprobados por la Asamblea Ciudadana, los reglamentos de sus órganos electos y los protocolos democráticos.</p>
 
-      <p>Además, la Comisión protege los derechos democráticos de las personas inscritas, de los Círculos y de los órganos internos de Más Madrid, en todos los niveles, y garantiza el correcto desempeño de sus obligaciones. Por último, la Comisión velará por el más estricto cumplimiento del Código Ético por parte de todas las personas que representen a PODEMOS u ocupen cargos públicos en su nombre, para que este proyecto siga siendo limpio y transparente.</p>
+      <p>Además, la Comisión protege los derechos democráticos de las personas inscritas, de los Círculos y de los órganos internos de Más Madrid, en todos los niveles, y garantiza el correcto desempeño de sus obligaciones. Por último, la Comisión velará por el más estricto cumplimiento del Código Ético por parte de todas las personas que representen a Más Madrid u ocupen cargos públicos en su nombre, para que este proyecto siga siendo limpio y transparente.</p>
 
       <p><%= link_to "Reglamento de la Comisión de Garantías Democraticas", "http://web-masmadrid.s3-eu-west-1.amazonaws.com/wordpress/wp-content/uploads/2015/02/REGLAMENTO-DE-LA-COMISI%C3%93N-DE-GARANT%C3%8DAS-DEMOCRATICAS.pdf" %></p>
 
