--- a/app/views/user_verifications/_multimedia.html.erb
+++ b/app/views/user_verifications/_multimedia.html.erb
@@ -5,8 +5,8 @@
     <iframe src="https://www.youtube.com/embed/U2UBbETMoxU?feature=oembed" style="margin-left:14px; max-width:100%" allowfullscreen="" frameborder="0" width="400" height="230"></iframe>
   </div>
   <div class="col-bhome-6a12 text-center">
-    <!-- a class="button" style="margin: 8% 4%;" href="https://files.podemos.info/esh2fTOXkK.pdf" target="_blank" rel="noopener noreferrer" title="Descargar Guía Identifícate con Podemos"><center><strong>Guía</strong><br />Identifícate con Podemos</center></a -->
-    <a class="button" style="margin: 8% 4%;" href="https://files.podemos.info/y9fHFqGlTC.pdf" target="_blank" rel="noopener noreferrer" title="Descargar Guía Identifícate con Podemos"><center><strong>Guía</strong><br />Identifícate con Más Madrid</center></a>
+    <!-- a class="button" style="margin: 8% 4%;" href="https://files.podemos.info/esh2fTOXkK.pdf" target="_blank" rel="noopener noreferrer" title="Descargar Guía Identifícate con Más Madrid"><center><strong>Guía</strong><br />Identifícate con Más Madrid</center></a -->
+    <a class="button" style="margin: 8% 4%;" href="https://files.podemos.info/y9fHFqGlTC.pdf" target="_blank" rel="noopener noreferrer" title="Descargar Guía Identifícate con Más Madrid"><center><strong>Guía</strong><br />Identifícate con Más Madrid</center></a>
   </div>
 </div>
 <br /><br /><br />
