Enlaces ayuda reañadidos

--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -20,6 +20,13 @@
               <li><a href="https://www.masmadrid.org/novedades">Novedades</a></li>
           </ul>
       </div>
+      <div class="sobre-nosotros-footer">
+          <h3>Ayuda</h3>
+          <ul>
+              <li><a href="mailto:ayuda-tecnica@másmadrid.org">¿Problemas con la inscripción?</a></li>
+              <li><a href="mailto:ayuda-votación@masmadrid.org">¿Problemas con la votación?</a></li>
+          </ul>
+      </div>
       <div class="redes-footer">
           <h3>síguenos</h3>
           <ul>
