enlaces ayuda arreglados

--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -23,8 +23,8 @@
       <div class="sobre-nosotros-footer">
           <h3>Ayuda</h3>
           <ul>
-              <li><a href="mailto:ayuda-tecnica@másmadrid.org">¿Problemas con la inscripción?</a></li>
-              <li><a href="mailto:ayuda-votación@masmadrid.org">¿Problemas con la votación?</a></li>
+              <li><a href="mailto:ayuda-tecnica@masmadrid.org">¿Problemas con la inscripción?</a></li>
+              <li><a href="mailto:ayuda-votacion@masmadrid.org">¿Problemas con la votación?</a></li>
           </ul>
       </div>
       <div class="redes-footer">
