--- a/app/assets/stylesheets/general.css.scss
+++ b/app/assets/stylesheets/general.css.scss
@@ -1847,7 +1847,6 @@ input.button-danger:hover{
 
 .content-content h2{
   font-family: Arial,sans-serif;
-  text-transform:capitalize;
   color:$verde-oscuro;
   margin-bottom:1em;
 }
@@ -1856,7 +1855,7 @@ input.button-danger:hover{
 }
 
 .content-content h3{
-  font-family:Montserrat,Arial,sans-sefif;
+  font-family:Arial,sans-sefif;
   display:block;
   width:100%;
   border-bottom:1px solid #d7cad8;
