cambio estilos privacy-policy

--- a/app/assets/stylesheets/general.css.scss
+++ b/app/assets/stylesheets/general.css.scss
@@ -3175,3 +3175,11 @@ fieldset .collaboration-assignment .inputlabel-box .input-box {
     margin: 0;
   }
 }
+
+.privacy-policy .box-info {
+  background-color: transparent;
+}
+
+.privacy-policy .box p {
+  color: #333;
+}
