--- a/app/views/tools/_other_tools.html.erb
+++ b/app/views/tools/_other_tools.html.erb
@@ -1,5 +1,5 @@
 <% content_for :title, "Herramientas de participación ciudadana" %>
-<%= content_tag(:h2, "Herramientas de participación ciudadana") %>
+<%= content_tag(:h2, "¡Bienvenid@! ¡Ya estás dentro!") %>
 <section class="tools">
   <ul>
     <% user_verification = UserVerification.where(user_id: current_user.id) %>
