--- a/app/views/page/candidaturas.html.erb
+++ b/app/views/page/candidaturas.html.erb
@@ -4,7 +4,7 @@
     <div class="col-b-4a12 privacy-policy">
     <% if user_signed_in? %>
       <h1>Candidaturas</h1>
-      <iframe height="800" width="100%" frameborder="0" src="/candidaturas.php"></iframe>
+      <iframe height="800" width="100%" frameborder="0" src="/form-candidaturas.php"></iframe>
     <% end %>
     </div>
   </div>
