Publicación listas de primarias

--- a/app/views/page/primarias.html.erb
+++ b/app/views/page/primarias.html.erb
@@ -1,11 +1,9 @@
-<% content_for :title, 'Primarias' %>
+<% content_for :title, 'Primarias Más Madrid' %>
 <div class="content-content cols">
   <div class="row">
     <div class="col-b-4a12 privacy-policy">
-    <% if user_signed_in? %>
-      <h1 class="titulo-candidaturas">Pimarias</h1>
+      <h1 class="titulo-candidaturas">Primarias Más Madrid</h1>
       <iframe height="800" width="100%" frameborder="0" src="/ver-candidaturas.php"></iframe>
-    <% end %>
     </div>
   </div>
 </div>
