--- a/app/views/microcredit/email_guide.pdf.erb
+++ b/app/views/microcredit/email_guide.pdf.erb
@@ -13,16 +13,21 @@
 </head>
   <body>
         <div class="microcreditos">
-            <div style="width:100%;">
-                <%= wicked_pdf_image_tag @brand_config["logo"], style: "float:left; width:40%;"%>
-            </div>
+            <div style="width:80%;">
+                <%= wicked_pdf_image_tag @brand_config["logo"], style: "float:left; width:30%;"%>
+            </div><br><br>
             <p style="clear:both"><%=t 'microcredit.email.intro'%></p>
-           <div class="grey"><strong><%=t 'microcredit.email.recipient'%></strong><br><%=@brand_config["name"].upcase%></div>
-            <div><strong><%=t 'microcredit.email.bank'%></strong><br>Fiare Banca Ética</div>
-            <div class="grey"><strong>SWIFT</strong><br>ETICES21</div>
+            <%if @loan.microcredit_option.present? %>
+            <div><strong><%=t 'microcredit.email.concept'%></strong><br><%=@loan.id%> <%=@loan.microcredit_option.name%></div>
+            <% else %>
+            <div><strong><%=t 'microcredit.email.concept'%></strong><br><%=@loan.id%> <%=@microcredit.title%></div>
+            <% end %>
             <div><strong><%=t 'microcredit.email.account_number'%></strong><br><%=@microcredit.account_number%></div>
-            <div class="grey"><strong><%=t 'microcredit.common.amount'%></strong><br><%=@loan.amount%>€</div>
-            <div><strong><%=t 'microcredit.email.concept'%></strong><br><%=@loan.id%>-<%=@microcredit.title%></div>
+            <div><strong><%=t 'microcredit.email.bank'%></strong><br>Fiare Banca Ética</div>
+            <div class="grey"><strong>SWIFT</strong><br>ETICES21 Solo para transferencias transnacionales</div>
+            <div><strong><%=t 'microcredit.email.recipient'%></strong><br><%=@brand_config["name"].upcase%></div>
+            <div><strong><%=t 'microcredit.common.amount'%></strong><br><%=@loan.amount%>€</div>
+
             <br>
             <p><br><%=t 'microcredit.email.thanks'%></p>
         </div>
