--- a/app/views/microcredit/sms_check.html.erb
+++ b/app/views/microcredit/sms_check.html.erb
@@ -26,7 +26,7 @@
       <h3>Solicitar código</h3>
       <%= form_tag(send_sms_check_microcredit_loan_path(@loan.id), method: :get) do |f| %>
           <fieldset>
-              <p>Si has perdido tu código, Utiliza el botón para solicitar que te enviemos el código de validación al teléfono móvil <% if @loan.user.phone %>(<%= @loan.user.phone %>)<% elsif @loan.user_data %>(<%= @loan.user_data.phone %>)<% end %>.</p>
+              <p>Si has perdido tu código, Utiliza el botón para solicitar que te enviemos el código de validación al teléfono móvil <% if @loan.user %>(<%= @loan.user.try(:phone) %>)<% elsif @loan.user_data %>(<%= YAML.load(@loan.user_data).try(:[], :phone) %>)<% end %>.</p>
               <%= submit_tag("Solicitar código", class: "button") %>
           </fieldset>
       <% end %>
